Added additional test cases of gmail api

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,6 +11,26 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>shouldBeABleToDeleteMessage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>shouldBeAbleToSendEmail</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>shouldBeAbleToGetMessage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>getListOfAllMessage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>shouldBeABleToDeleteMessageAgain</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>shouldBeAbleToGetProfileDetails</td>
 <td>&nbsp;</td></tr>
 <tr>
