--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bdf5e5">  <td>24/12/29 20:11:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITests.shouldBeAbleToGetProfileDetails()[pri:1, instance:com.google.oauth2.tests.GmailAPITests@2781e022]">shouldBeAbleToGetProfileDetails</td> 
+<tr bgcolor="bdf5e5">  <td>24/12/30 20:57:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITests.shouldBeAbleToSendEmail()[pri:2, instance:com.google.oauth2.tests.GmailAPITests@2781e022]">shouldBeAbleToSendEmail</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bdf5e5">  <td>24/12/30 20:57:16</td>   <td>4193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITests.shouldBeABleToDeleteMessageAgain()[pri:6, instance:com.google.oauth2.tests.GmailAPITests@2781e022]">shouldBeABleToDeleteMessageAgain</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bdf5e5">  <td>24/12/30 20:57:13</td>   <td>1264</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITests.shouldBeAbleToGetMessage()[pri:3, instance:com.google.oauth2.tests.GmailAPITests@2781e022]">shouldBeAbleToGetMessage</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bdf5e5">  <td>24/12/30 20:57:14</td>   <td>2323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITests.getListOfAllMessage()[pri:4, instance:com.google.oauth2.tests.GmailAPITests@2781e022]">getListOfAllMessage</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bdf5e5">  <td>24/12/30 20:57:15</td>   <td>3307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITests.shouldBeABleToDeleteMessage()[pri:5, instance:com.google.oauth2.tests.GmailAPITests@2781e022]">shouldBeABleToDeleteMessage</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="bdf5e5">  <td>24/12/30 20:57:04</td>   <td>-7967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GmailAPITests.shouldBeAbleToGetProfileDetails()[pri:1, instance:com.google.oauth2.tests.GmailAPITests@2781e022]">shouldBeAbleToGetProfileDetails</td> 
   <td>main@1896294051</td>   <td></td> </tr>
 </table>
