--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,51 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">13,127</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,775</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.google.oauth2.tests.GmailAPITests</td><td><a href="#m0">shouldBeABleToDeleteMessageAgain</a></td><td rowspan="1">1735572436301</td><td rowspan="1">910</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.google.oauth2.tests.GmailAPITests</td><td><a href="#m1">getListOfAllMessage</a></td><td rowspan="1">1735572434431</td><td rowspan="1">972</td></tr><tr class="passedeven"><td><a href="#m2">shouldBeABleToDeleteMessage</a></td><td rowspan="1">1735572435415</td><td rowspan="1">881</td></tr><tr class="passedeven"><td><a href="#m3">shouldBeAbleToGetMessage</a></td><td rowspan="1">1735572433372</td><td rowspan="1">1054</td></tr><tr class="passedeven"><td><a href="#m4">shouldBeAbleToGetProfileDetails</a></td><td rowspan="1">1735572424142</td><td rowspan="1">7953</td></tr><tr class="passedeven"><td><a href="#m5">shouldBeAbleToSendEmail</a></td><td rowspan="1">1735572432108</td><td rowspan="1">1262</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">com.google.oauth2.tests.GmailAPITests</td><td><a href="#m0">getListOfAllMessage</a></td><td rowspan="1">1735575690206</td><td rowspan="1">974</td></tr><tr class="passedeven"><td><a href="#m1">shouldBeABleToDeleteMessage</a></td><td rowspan="1">1735575691190</td><td rowspan="1">970</td></tr><tr class="passedeven"><td><a href="#m2">shouldBeAbleToGetMessage</a></td><td rowspan="1">1735575688233</td><td rowspan="1">931</td></tr><tr class="passedeven"><td><a href="#m3">shouldBeAbleToGetProfileDetails</a></td><td rowspan="1">1735575679441</td><td rowspan="1">7568</td></tr><tr class="passedeven"><td><a href="#m4">shouldBeAbleToSendEmail</a></td><td rowspan="1">1735575687021</td><td rowspan="1">1207</td></tr><tr class="passedeven"><td><a href="#m5">shouldBeAbleToUpdateMessage</a></td><td rowspan="1">1735575689169</td><td rowspan="1">1032</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.google.oauth2.tests.GmailAPITests#shouldBeABleToDeleteMessageAgain</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [204] but found [200]
-	at org.testng.Assert.fail(Assert.java:99)
-	at org.testng.Assert.failNotEquals(Assert.java:1037)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
-	at org.testng.Assert.assertEquals(Assert.java:122)
-	at org.testng.Assert.assertEquals(Assert.java:907)
-	at org.testng.Assert.assertEquals(Assert.java:917)
-	at com.google.oauth2.tests.GmailAPITests.shouldBeABleToDeleteMessageAgain(GmailAPITests.java:76)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.util.ArrayList.forEach(ArrayList.java:1259)
-	at org.testng.TestRunner.privateRun(TestRunner.java:794)
-	at org.testng.TestRunner.run(TestRunner.java:596)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
-	at org.testng.TestNG.runSuites(TestNG.java:1063)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.google.oauth2.tests.GmailAPITests#getListOfAllMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.google.oauth2.tests.GmailAPITests#shouldBeABleToDeleteMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.google.oauth2.tests.GmailAPITests#shouldBeAbleToGetMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.google.oauth2.tests.GmailAPITests#shouldBeAbleToGetProfileDetails</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.google.oauth2.tests.GmailAPITests#shouldBeAbleToSendEmail</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.google.oauth2.tests.GmailAPITests#getListOfAllMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.google.oauth2.tests.GmailAPITests#shouldBeABleToDeleteMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.google.oauth2.tests.GmailAPITests#shouldBeAbleToGetMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.google.oauth2.tests.GmailAPITests#shouldBeAbleToGetProfileDetails</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.google.oauth2.tests.GmailAPITests#shouldBeAbleToSendEmail</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.google.oauth2.tests.GmailAPITests#shouldBeAbleToUpdateMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
