--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button class="button" id="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\h\AppData\Local\Temp\testng-eclipse--1114642781\testng-customsuite.xml</span>
+                    <span>C:\Users\h\AppData\Local\Temp\testng-eclipse--1056843435\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,21 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods, 1 failed,   5 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Default_suite">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.google.oauth2.tests.GmailAPITests" hash-for-method="shouldBeABleToDeleteMessageAgain">shouldBeABleToDeleteMessageAgain</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -141,6 +127,11 @@
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.google.oauth2.tests.GmailAPITests" hash-for-method="shouldBeAbleToSendEmail">shouldBeAbleToSendEmail</a> <!-- method navigator-link -->
                       </span>
                       <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.google.oauth2.tests.GmailAPITests" hash-for-method="shouldBeAbleToUpdateMessage">shouldBeAbleToUpdateMessage</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
@@ -153,61 +144,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.google.oauth2.tests.GmailAPITests</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="shouldBeABleToDeleteMessageAgain">
-                  </a> <!-- shouldBeABleToDeleteMessageAgain -->
-                  <span class="method-name">shouldBeABleToDeleteMessageAgain</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [204] but found [200]
-	at org.testng.Assert.fail(Assert.java:99)
-	at org.testng.Assert.failNotEquals(Assert.java:1037)
-	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
-	at org.testng.Assert.assertEquals(Assert.java:122)
-	at org.testng.Assert.assertEquals(Assert.java:907)
-	at org.testng.Assert.assertEquals(Assert.java:917)
-	at com.google.oauth2.tests.GmailAPITests.shouldBeABleToDeleteMessageAgain(GmailAPITests.java:76)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.util.ArrayList.forEach(ArrayList.java:1259)
-	at org.testng.TestRunner.privateRun(TestRunner.java:794)
-	at org.testng.TestRunner.run(TestRunner.java:596)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
-	at org.testng.TestNG.runSuites(TestNG.java:1063)
-	at org.testng.TestNG.run(TestNG.java:1031)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-
-</div> <!-- stack-trace -->
-                  <em>
-(Trying to delete alredy deleted content in this case will get 204(NO CONTENT))                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -259,12 +195,21 @@
 (User should able to send the email)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="shouldBeAbleToUpdateMessage">
+                  </a> <!-- shouldBeAbleToUpdateMessage -->
+                  <span class="method-name">shouldBeAbleToUpdateMessage</span>
+                  <em>
+(User should be able to update Message)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\h\AppData\Local\Temp\testng-eclipse--1114642781\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\h\AppData\Local\Temp\testng-eclipse--1056843435\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -317,32 +262,32 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'shouldBeAbleToGetProfileDetails')
 data.setCell(0, 2, 'com.google.oauth2.tests.GmailAPITests')
-data.setCell(0, 3, 7953);
+data.setCell(0, 3, 7568);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'shouldBeAbleToSendEmail')
 data.setCell(1, 2, 'com.google.oauth2.tests.GmailAPITests')
-data.setCell(1, 3, 1262);
+data.setCell(1, 3, 1207);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'shouldBeAbleToGetMessage')
+data.setCell(2, 1, 'shouldBeAbleToUpdateMessage')
 data.setCell(2, 2, 'com.google.oauth2.tests.GmailAPITests')
-data.setCell(2, 3, 1054);
+data.setCell(2, 3, 1032);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'getListOfAllMessage')
 data.setCell(3, 2, 'com.google.oauth2.tests.GmailAPITests')
-data.setCell(3, 3, 972);
+data.setCell(3, 3, 974);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'shouldBeABleToDeleteMessageAgain')
+data.setCell(4, 1, 'shouldBeABleToDeleteMessage')
 data.setCell(4, 2, 'com.google.oauth2.tests.GmailAPITests')
-data.setCell(4, 3, 910);
+data.setCell(4, 3, 970);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'shouldBeABleToDeleteMessage')
+data.setCell(5, 1, 'shouldBeAbleToGetMessage')
 data.setCell(5, 2, 'com.google.oauth2.tests.GmailAPITests')
-data.setCell(5, 3, 881);
+data.setCell(5, 3, 931);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -357,9 +302,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.google.oauth2.tests.GmailAPITests</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">shouldBeABleToDeleteMessageAgain</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -375,25 +327,23 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">shouldBeAbleToSendEmail</span>
-                <span class="method-start">7966 ms</span>
+                <span class="method-start">7580 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">shouldBeAbleToGetMessage</span>
-                <span class="method-start">9230 ms</span>
+                <span class="method-start">8792 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">shouldBeAbleToUpdateMessage</span>
+                <span class="method-start">9728 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">getListOfAllMessage</span>
-                <span class="method-start">10289 ms</span>
+                <span class="method-start">10765 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">shouldBeABleToDeleteMessage</span>
-                <span class="method-start">11273 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">shouldBeABleToDeleteMessageAgain</span>
-                <span class="method-start">12159 ms</span>
+                <span class="method-start">11749 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
