--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -27,6 +27,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>shouldBeAbleToUpdateMessage</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>shouldBeABleToDeleteMessageAgain</td>
 <td>&nbsp;</td></tr>
 <tr>
